<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="125dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OpenCamera"
        android:id="@+id/photobutton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/taskbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SwachtaTask"

        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Volunteer"
        android:id="@+id/volunterbutton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Notification"
        android:id="@+id/notificationbutton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Contribute"
        android:id="@+id/contributebutton"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
</ScrollView>